--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
     "build": "webpack --config ./webpack.config.js --env mode=prod",
     "lint": "eslint . --ext .ts",
-    "deploy": "gh-pages -d dist -e christmas-task-part2 --message 'fix: adjust deploy'"
+    "deploy": "gh-pages -d dist --message 'deploy: push dist to gh-pages'"
   },
   "repository": {
     "type": "git",
